--- a/css/components.no-reset.css
+++ b/css/components.no-reset.css
@@ -1256,6 +1256,7 @@
   background-color: var(--color-neutral-secondary-medium);
   padding-inline: calc(var(--spacing) * 4);
   padding-block: calc(var(--spacing) * 2.5);
+  font-family: var(--font-sans);
   font-size: var(--text-sm);
   line-height: var(--tw-leading, var(--text-sm--line-height));
   --tw-leading: calc(var(--spacing) * 5);
