--- a/css/components.src.css
+++ b/css/components.src.css
@@ -264,7 +264,7 @@
 }
 
 .user-profile-wrapper .user-profile-login-pill {
-  @apply inline-flex items-center gap-1.5 text-body bg-neutral-secondary-medium border border-default-medium font-medium leading-5 rounded-full text-sm px-4 py-2.5 cursor-pointer;
+  @apply inline-flex items-center gap-1.5 font-sans text-body bg-neutral-secondary-medium border border-default-medium font-medium leading-5 rounded-full text-sm px-4 py-2.5 cursor-pointer;
   @apply hover:bg-neutral-tertiary-medium hover:text-heading;
   @apply focus:ring-4 focus:ring-neutral-tertiary focus:outline-none;
   @apply shadow-xs;
